update to upload

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>EBE Wifi to serial transfer</title>
+<title>HTML5 File Drag &amp; Drop API</title>
 <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
 </head>
 <body>
 
-<h1>East Branch Engineering Machine Portal</h1>
+<h1>HTML5 File Drag &amp; Drop API</h1>
 
 
-<form id="upload" action="index.html" method="POST" enctype="multipart/form-data">
+<form id="upload" action="upload.php" method="POST" enctype="multipart/form-data">
 
 <fieldset>
 <legend>HTML File Upload</legend>
@@ -31,9 +31,12 @@
 
 </form>
 
+<div id="progress"></div>
+
 <div id="messages">
 <p>Status Messages</p>
 </div>
+
 
 <script src="filedrag.js"></script>
 </body>
