--- a/index.html
+++ b/index.html
@@ -2,42 +2,18 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>HTML5 File Drag &amp; Drop API</title>
+<title>East Branch Machine Bridge</title>
 <link rel="stylesheet" type="text/css" media="all" href="styles.css" />
 </head>
 <body>
 
-<h1>HTML5 File Drag &amp; Drop API</h1>
+<h1>East Branch Engineering</h1>
 
 
 <form id="upload" action="upload.php" method="POST" enctype="multipart/form-data">
+	File: <input type="file" name="filename" />
+	<input type="submit" value="Upload" />
+</form>	
 
-<fieldset>
-<legend>HTML File Upload</legend>
-
-<input type="hidden" id="MAX_FILE_SIZE" name="MAX_FILE_SIZE" value="300000" />
-
-<div>
-	<label for="fileselect">Files to upload:</label>
-	<input type="file" id="fileselect" name="fileselect[]" multiple="multiple" />
-	<div id="filedrag">or drop files here</div>
-</div>
-
-<div id="submitbutton">
-	<button type="submit">Upload Files</button>
-</div>
-
-</fieldset>
-
-</form>
-
-<div id="progress"></div>
-
-<div id="messages">
-<p>Status Messages</p>
-</div>
-
-
-<script src="filedrag.js"></script>
 </body>
 </html>
