--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <form id="upload" action="upload.php" method="POST" enctype="multipart/form-data">
-	File: <input type="file" name="filename" />
+	File: <input type="file" name="file" />
 	<input type="submit" value="Upload" />
 </form>	
 
