--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 <h1>East Branch Engineering</h1>
 
-
+<a href="log.php">Log File</a></br></br>
+<a href="config.html">update serial parameters</a></br></br>
 <form id="upload" action="upload.php" method="POST" enctype="multipart/form-data">
-	File: <input type="file" name="file" />
+	Upload File to machine: <input type="file" name="file" />
 	<input type="submit" value="Upload" />
 </form>	
 
