--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>East Branch Machine Bridge</title>
+	<meta charset="UTF-8" />
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<title>East Branch Machine Bridge</title>
 </head>
 <body>
 
-<h1>East Branch Engineering</h1>
-
-<a href="log.php">Log File</a></br></br>
-<a href="config.html">update serial parameters</a></br></br>
-<form id="upload" action="upload.php" method="POST" enctype="multipart/form-data">
-	Upload File to machine: <input type="file" name="file" />
-	<input type="submit" value="Upload" />
-</form>	
+	<h1>East Branch Engineering</h1>
+	<div class="btn-group">
+		<button type="button" class="btn btn-default"><a href="log.html">Log File</a></button>
+		<button type="button" class="btn btn-default"><a href="config.html">update serial parameters</a></button>
+	</div>
+	</br>
+	
+	<form id="upload" action="upload.php" method="POST" enctype="multipart/form-data">
+	Upload File to machine: <input type="file" name="file"/><input type="submit" value="Upload" />
+	</form>	
 
 </body>
 </html>
