--- a/log.html
+++ b/log.html
@@ -19,18 +19,19 @@
 		$file = @fopen('upload/machine_log.txt', "r") ;  
 
 		// while there is another line to read in the file
-		while (!feof($file)){
-		    // Get the current line that the file is reading
-		    $currentLine = fgets($file) ;
-		    if (strapos($currentLine, 'ERROR') !== false){
-		    	$status = 'danger';} //bootstap danger class for coloring table row
+		while (!feof($file))
+			{
+				// Get the current line that the file is reading
+				$currentLine = fgets($file) ;
+				if (strapos($currentLine, 'ERROR') !== false){
+					$status = 'danger';}				}
 
-		    if (strapos($currentLine, 'NOTICE') !== false){
-		    	$status = 'success';} //bootstap success class for coloring table row
+				if (strapos($currentLine, 'NOTICE') !== false){
+					$status = 'success';}
 
-		    echo "<tr class=" . $status . ">";
-		    echo "<td>" . $currentLine . "</td>";
-		    echo "</tr>";
+				echo "<tr class=" . $status . ">";
+				echo "<td>" . $currentLine . "</td>";
+				echo "</tr>";
 			}   
 		fclose($file) ;
 
