--- a/log.html
+++ b/log.html
@@ -28,11 +28,7 @@
 				if (strapos($currentLine, 'NOTICE') !== false){
 					$status = 'success';}
 
-				echo "<tr ";
-				echo "<td>";
-				echo $currentLine ;
-				echo "</td>";
-				echo "</tr>";
+				echo "test"
 			}   
 		fclose($file) ;
 
