--- a/log.html
+++ b/log.html
@@ -16,7 +16,7 @@
 	<table class="table table-condensed table-hover">
 	<?php
 
-		$file = fopen("upload/machine_log.txt", "r") ;  
+		$file = @fopen("/upload/machine_log.txt", "r") ;  
 
 		// while there is another line to read in the file
 		while (!feof($file)){
@@ -29,7 +29,8 @@
 					$status = 'success';}
 
 				echo "test"
-			}   
+			} 
+			echo "end of file reached"  
 		fclose($file) ;
 
 	?>
