--- a/index.html
+++ b/index.html
@@ -3,20 +3,40 @@
 <head>
 	<meta charset="UTF-8" />
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/custom.css" rel="stylesheet">
 	<title>East Branch Machine Bridge</title>
 </head>
 <body>
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">East Branch Engineering</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="config.html">Config</a></li>
+            <li><a href="log.php">Log</a></li>
+           </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
 
-	<h1>East Branch Engineering</h1>
-	<div class="btn-group">
-		<button type="button" class="btn btn-default"><a href="log.html">Log File</a></button>
-		<button type="button" class="btn btn-default"><a href="config.html">update serial parameters</a></button>
-	</div>
-	</br>
+    <div class="container">
+    	<form role="form" class="form-inline" id="upload" action="upload.php" method="POST" enctype="multipart/form-data">
+    		<div class="form-group">
+    			<label class="sr-only">Upload file to machine</label>
+				  <input type="file" name="file"/>
+				  <input type="submit" value="Upload"/>
+        </div>
+		  </form>
+	   </div>
 	
-	<form id="upload" action="upload.php" method="POST" enctype="multipart/form-data">
-	Upload File to machine: <input type="file" name="file"/><input type="submit" value="Upload" />
-	</form>	
-
 </body>
 </html>
