--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </div>
 
     <div class="container">
-    	<form class="form-inline" role="form" action="upload.php">
+    	<form class="form-inline" role="form" action="upload.php" id="upload" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label class="sr-only" for="file_name">File to Upload</label>
-          <input type="file" id="file" class="form=control">
+          <input type="file" id="file" >
         </div>
         <button type="submit" class="btn btn-default">Upload</button>
       </form>
