--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     	<form class="form-inline" role="form" action="upload.php" id="upload" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label class="sr-only" for="file_name">File to Upload</label>
-          <input type="file" id="file" >
+          <input type="file" name="file" >
         </div>
         <button type="submit" class="btn btn-default">Upload</button>
       </form>
