--- a/index.html
+++ b/index.html
@@ -30,14 +30,21 @@
     </div>
 
     <div class="container">
-    	<form class="form-inline" role="form" action="upload.php" id="upload" method="POST" enctype="multipart/form-data">
-        <div class="form-group">
-          <label class="sr-only" for="file_name">File to Upload</label>
-          <input type="file" name="file" >
+      <div class="row>">
+        <div class="panel panel-default col-md-6">
+          <div class="panel-heading">Upload</div>
+          <div class="panel-body">
+            <form class="form-inline" role="form" action="upload.php" id="upload" method="POST" enctype="multipart/form-data">
+              <div class="form-group">
+                <label class="sr-only" for="file_name">File to Upload</label>
+                <input type="file" name="file" >
+                <button type="submit" class="btn btn-default">Upload</button>
+              </div>
+            </form>
+          </div>
         </div>
-        <button type="submit" class="btn btn-default">Upload</button>
-      </form>
-	   </div>
+      </div>
+    </div>
 
 
 </body>
