remove link to config.html, update nav

--- a/list.html
+++ b/list.html
@@ -21,9 +21,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="config.html">Config</a></li>
             <li><a href="log.php">Log</a></li>
-            <li><a href="list.php">List Files</a></li>
+            <li><a class="Active" href="list.php">List Files</a></li>
            </ul>
         </div><!--/.nav-collapse -->
       </div>
