--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <div class="form-group">
                 <label class="sr-only" for="file_name">File to Upload</label>
                 <input type="file" name="file" >
+                <label><input type="checkbox" id="delete">Delete Existing Files</label>
               </div>
                 <button type="submit" class="btn btn-default">Upload</button>
             </form>
@@ -122,7 +123,12 @@
                   </select>
                 </div>
               </div>
-
+              <div class="form-group">
+                <label for="extension" class="col-sm-6 control-label">Password</label>
+                <div class="col-sm-6">
+                  <input type="password" class="form-control" id="password" placeholder="password">
+                </div>
+              </div>
               <div class="form-group">
                 <label class="col-sm-4 control-label">Save Settings</label>
                 <div class="col-sm-6">
