--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <div class="form-group">
                 <label class="sr-only" for="file_name">File to Upload</label>
                 <input type="file" name="file" >
-                <label><input type="checkbox" id="delete">Delete Existing Files</label>
+                <label><input type="checkbox" name="delete">Delete Existing Files</label>
               </div>
                 <button type="submit" class="btn btn-default">Upload</button>
             </form>
