--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     <div class="container">
          <?php
           if ($_GET['message']=="success_upload"){
-            echo "<div class='alert alert-success'>";
-            echo "<strong>SUCCESS! </strong>File Uploaded";
-            echo "</div>";
+            //echo "<div class='alert alert-success'>";
+            //echo "<strong>SUCCESS! </strong>File Uploaded";
+            //echo "</div>";
           }
 
           if ($_GET['message']=="fail_upload"){
-            echo "<div class='alert alert-danger'>";
-            echo "<strong>FAILURE! </strong>Error Uploading File";
-            echo "</div>";
+            //echo "<div class='alert alert-danger'>";
+            //echo "<strong>FAILURE! </strong>Error Uploading File";
+            //echo "</div>";
           }
 
 
