--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 
     <div class="container">
          <?php
-          if ($_GET['message']=="success_upload"){
+         // if ($_GET['message']=="success_upload"){
             //echo "<div class='alert alert-success'>";
             //echo "<strong>SUCCESS! </strong>File Uploaded";
             //echo "</div>";
-          }
+         // }
 
-          if ($_GET['message']=="fail_upload"){
+         // if ($_GET['message']=="fail_upload"){
             //echo "<div class='alert alert-danger'>";
             //echo "<strong>FAILURE! </strong>Error Uploading File";
             //echo "</div>";
-          }
+         // }
 
 
         ?>
